--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,8 @@ Le 25 et 26 avril 2015 à Evry Centre Essonne aux Arènes de l'Agora." />
   <%= stylesheet_link_tag    "application", media: "all", "data-turbolinks-track" => true %>
   <%= javascript_include_tag "application", "data-turbolinks-track" => true %>
   <%= csrf_meta_tags %>
+
+  <%= render 'layouts/analytics' %>
 </head>
 
 <% background = "empty" %>
