footer contact en mailto

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer text-center">
   <div class="container">
-    <%= link_to "Contact", contact_egc_path %>
+    <%= link_to "Contact", "mailto:" + t("egc.contact") %>
     <span> - </span> 
     <%= link_to "Informations légales", informations_legales_path %>
     <span> - </span> 
