ajout du dossier de pressen en visuel (pbs sur chrome+ubuntu et chrome+arium)

--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -12,3 +12,12 @@
 </div>
 
 
+<% pdfPresse = "Communique de presse Evry Games City.pdf" %>
+
+<div>
+<object data="<%= pdfPresse %>" type="application/pdf" style="width: 100%; height: 830px; display: block;">
+alt : <a href="<%= pdfPresse %>">Communiqué de presse Evry Games City</a>
+</object>
+</div> 
+
+
