espace presse ok

--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -8,16 +8,20 @@
 <div class="panel transparent">
   <div class="panel-body">
     Pour toute question qui ne trouverait pas une réponse sur le site, n'hésitez pas à nous contacter directement à l’adresse suivante : <%= link_to "contactpresse@evrygamescity.fr", "mailto:contactpresse@evrygamescity.fr" %>
+
+    <div class="pdf_presse">
+      <a href="Communique de presse Evry Games City.pdf" target="_blank">
+        <img src="/assets/dossier_presse.jpg" alt="Communiqué de presse Evry Games City" class="img-responsive">
+      </a>
+    </div>
+
   </div>
+
+
+
 </div>
 
 
-<% pdfPresse = "Communique de presse Evry Games City.pdf" %>
 
-<div>
-<object data="<%= pdfPresse %>" type="application/pdf" style="width: 100%; height: 830px; display: block;">
-alt : <a href="<%= pdfPresse %>">Communiqué de presse Evry Games City</a>
-</object>
-</div> 
 
 
