espace presse fix

--- a/app/views/static_pages/presse.html.erb
+++ b/app/views/static_pages/presse.html.erb
@@ -11,7 +11,7 @@
 
     <div class="pdf_presse">
       <a href="Communique de presse Evry Games City.pdf" target="_blank">
-        <img src="/assets/dossier_presse.jpg" alt="Communiqué de presse Evry Games City" class="img-responsive">
+        <%= image_tag "dossier_presse.jpg", alt: "Communiqué de presse", class:"img-responsive" %>
       </a>
     </div>
 
