reactivation de la page partenaires

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -62,7 +62,7 @@
         </li>
 
         <li class="<%= set_active("partenaires")%>">
-          <a class="navlink" href="/partenaires" style="pointer-events: none;"><%= t(:partenaires) %></a>
+          <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
         </li>
         <li class="<%= set_active("presse")%>">
           <a class="navlink" href="/presse">Presse</a>
