video home page

--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -71,7 +71,7 @@
             <div class="panel-body">
               <!-- user:EvryGamesCity -->
               <!-- SnapWidget -->
-              <iframe src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMDB8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=191214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:100%; height:305px"></iframe>
+              <iframe src="http://snapwidget.com/sl/?u=ZXZyeWdhbWVzY2l0eXxpbnwzMDB8M3wzfHxub3w1fG5vbmV8b25TdGFydHx5ZXN8bm8=&ve=191214" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; height:305px"></iframe>
 
               <!-- hashtag:EGVRYGAMESCITY-->
               <!-- SnapWidget -->
@@ -85,6 +85,12 @@
 
   </div>
 
+
+  <div class="row youtube">
+    <div class="col-md-12 youtube-container embed-responsive-16by9">
+      <iframe class="embed-responsive-item" style="width: 100%; height: 400px" src="https://www.youtube.com/embed/qa9qNdW0Rvk" frameborder="0" allowfullscreen></iframe>
+    </div>
+  </div>
 
 
   <div class="row infos">
