--- a/app/views/static_pages/partenaires.html.erb
+++ b/app/views/static_pages/partenaires.html.erb
@@ -11,7 +11,7 @@
 
 
 
-<div class="row">
+<div class="row partenaires-row">
   <% (1..9).each do |i| %>
 
     <div class="col-md-2 mosaique-container">
@@ -20,12 +20,18 @@
 
     <% if i == nbProducteurs %>
       </div>
-      <div class="row">
-        <div class="col-md-12 bold"><h4>Partenaires Officiels</h4></div>
+      <div class="row partenaires-row">
+        <div class="col-md-12 bold">
+          <h4>Partenaires Officiels</h4>
+          <hr />
+        </div>
     <% elsif i == nbProducteurs + nbOfficiels %>
       </div>
-      <div class="row">
-        <div class="col-md-12 bold"><h4>Relais Médias</h4></div>
+      <div class="row partenaires-row">
+        <div class="col-md-12 bold">
+          <h4>Relais Médias</h4>
+          <hr />
+        </div>
     <% end %>
 
   <% end  %>
