--- a/app/assets/stylesheets/layout.css.scss
+++ b/app/assets/stylesheets/layout.css.scss
@@ -56,7 +56,7 @@ footer {
 
     border-top: 2px solid #eaeaea;
     * { margin-right: 20px; }
-    a:hover, a:link, a:visited, a:active { color: white; }
+    a:hover, a:link, a:visited, a:active { color: #eee; }
     text-shadow: 1px 1px #707070;    
 
     td.ml { margin-left: 10px !important; }
