logo ville d'evry remis sur presentation

--- a/app/views/static_pages/presentation.html.erb
+++ b/app/views/static_pages/presentation.html.erb
@@ -59,7 +59,7 @@ Sans compter que la Fibre optique arrive. Une convention entre Orange, les Ville
 L’objectif : une couverture complète d’ici la fin 2018 ( déjà, 33% de couverture fin 2015 )<br /><br />
 Rejoignez la Ville d’Évry sur <%= link_to "Facebook", "https://www.facebook.com/pages/Evry/47685962630", target: "_blank" %>, <%= link_to "Twitter", "https://twitter.com/villedevry", target: "_blank" %> et <%= link_to "evry.fr", "http://www.evry.fr/", target: "_blank" %>.<br /><br />
 
-<%= image_tag t("partenaire-3.image"), class: "img-responsive" %>
+<%= image_tag "Partenaires_LOGOS_EVRY_bis.png", class: "img-responsive" %>
 
     <h4 class="orange small_bold">La jeunesse, au cœur d’Évry</h4>
    
