partenaires au lieu de relai média

--- a/app/views/static_pages/partenaires.html.erb
+++ b/app/views/static_pages/partenaires.html.erb
@@ -29,7 +29,7 @@
       </div>
       <div class="row partenaires-row">
         <div class="col-md-12 bold">
-          <h4>Relais Médias</h4>
+          <h4>Partenaires</h4>
           <hr />
         </div>
     <% end %>
