--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -1,4 +1,5 @@
 
+
 <div class="panel panel-default banniere-game">
   <div class="panel-body">
     <%= image_tag t("lol.banniere"), class: "img-responsive" %>
@@ -8,27 +9,47 @@
   </div>
 </div>
 
+<div class="col-md-6">
+ <iframe class="embed-responsive-item" width="100%" height="315" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/information?_locale=en_GB" frameborder="0" allowfullscreen></iframe> 
+</div>
 
 
-<div class="panel transparent">
-  <div class="panel-heading text-center">
-    <h4>REGLES</h4>
-  </div>
-  <div class="panel-body">
-    <h4>Tournois 16 slots sur inscriptions.</h4>
-    <h4 class="orange">Déroulement  sur place : </h4>
-    <ul>
-      <li>Phase de poule en BO1</li>
-      <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
-      <li>Finale en BO5</li>
-    </ul>
+<div class="col-md-6">
+  <div class="panel transparent" style="height: 315px;">
+    <div class="panel-heading text-center">
+      <h4>REGLES</h4>
+    </div>
+    <div class="panel-body">
+      <h4>Tournois 16 slots sur inscriptions.</h4>
+      <h4 class="orange">Déroulement  sur place : </h4>
+      <ul>
+        <li>Phase de poule en BO1</li>
+        <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
+        <li>Finale en BO5</li>
+      </ul>
 
-    Pour plus de précisions, merci de vous référencer aux document des Masters Français du Jeu Vidéo disponibles <%= link_to "ici", "http://www.mastersjeuvideo.org/files/rules/Annexe_LoL_2014-2015.pdf", target: :blank %>
+      Pour plus de précisions, merci de vous référencer aux document des Masters Français du Jeu Vidéo disponibles <%= link_to "ici", "http://www.mastersjeuvideo.org/files/rules/Annexe_LoL_2014-2015.pdf", target: :blank %>
 
+    </div>
   </div>
 </div>
 
 
-<%= render partial: 'jeux/jeu_subsection', locals: { gametag: :lol, categ: :materiel} %>
-<%= render partial: 'jeux/jeu_subsection', locals: { gametag: :lol, categ: :recompenses} %>
+<div class="col-md-4">
+  <%= render partial: 'jeux/jeu_subsection', locals: { gametag: :lol, categ: :recompenses} %>
+</div>
 
+
+<div class="col-md-8">
+  <%= render partial: 'jeux/jeu_subsection', locals: { gametag: :lol, categ: :materiel} %>
+</div>
+
+
+<div class="col-md-6">
+  <iframe class="embed-responsive-item" width="100%" height="315" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/participants?_locale=en_GB" frameborder="0" allowfullscreen></iframe> 
+</div>
+
+
+<div class="col-md-6">
+  <iframe class="embed-responsive-item" width="100%" height="315" src="//www.toornament.com/widget/tournaments/547df84b140ba0ea048b458e/stages/1?_locale=en_GB" frameborder="0" allowfullscreen></iframe> 
+</div>
