esapcement dégueu dans partenaires relais média

--- a/app/views/static_pages/partenaires.html.erb
+++ b/app/views/static_pages/partenaires.html.erb
@@ -35,7 +35,7 @@
         </div>
     <% elsif i == nbProducteurs + nbOfficiels + nbNonOfficiels %>
       </div>
-      <div class="row relais-media-row">
+      <div class="row partenaires-row">
         <div class="col-md-12 bold">
           <h4>Relais Médias</h4>
           <hr />
