modif de la description de l'egs

--- a/app/views/static_pages/contact_egs.html.erb
+++ b/app/views/static_pages/contact_egs.html.erb
@@ -17,7 +17,11 @@
   </div>
  
   <div class="panel-body">
-    <p><span class="orange">L’ENSIIE Game Show</span> était à l’origine un projet scolaire réalisé par des étudiants de l’ENSIIE, école d’ingénieurs en informatique située à Evry. Le but était alors d’organiser un tournoi de jeux vidéo à l’époque Warcraft 3 et Counter-Strike entre école d’ingénieurs, afin d’élire au cours d’une compétition offline le meilleur joueur-élève ingénieur de France. L’idée a été reprise par le club de jeux vidéo de l’école, et c’est donc l’association LanPartIIE qui s’est chargée de l’organisation du tournoi pendant plusieurs années. Le concept a légèrement évolué et nous proposons désormais à des joueurs de toute la France de s’affronter sur CS : GO, Starcraft 2, LoL ou Heathstone. </p>
+
+   <p>Le staff d’<span class="orange">Evry Games City</span> est majoritairement composé de membres de L’<span class="orange">ENSIIE Game Show</span>. Entièrement constituée de bénévoles passionnés de jeux vidéo, l'association a pour ambition d’organiser des LAN de qualités, ainsi que tous les types d’évènements impliquant les jeux vidéo.</p>
+   <p>Les membres du staff viennent de tous les horizons (professionnels ou étudiants) et s’impliquent en mettant à contribution leurs compétences et savoirs faire indispensables à la réussite de ces évènements.</p>
+   <p>Cette année, l'association organise une LAN de grande envergure, sur les 4 titres majeurs de la scène E-sport : LoL, CS : GO, SC et Hearthstone. Les meilleures équipes s'affronteront pour se répartir 10 000 euros de cash prize et s'imposer parmi les meilleurs joueurs français.</p>
+
   </div>
 
 </div>
