remplacement des bannières de jeux

--- a/app/views/jeux/hs.html.erb
+++ b/app/views/jeux/hs.html.erb
@@ -2,9 +2,9 @@
 <div class="panel panel-default banniere-game">
   <div class="panel-body">
     <%= image_tag t("hs.banniere"), class: "img-responsive" %>
-    <div class="game-title text-center col-md-12">
+    <!--div class="game-title text-center col-md-12">
       <h1 class="bold"><%= t("hs.name") %></h1>
-    </div>
+    </div-->
   </div>
 </div>
 
