--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -12,6 +12,12 @@
       </div>
 </div>
 
+<!-- billeterie -->
+<div class="panel panel-iframe">
+  <iframe class="embed-responsive-item" width="300" height="88" src="//www.toornament.com/widget/tournaments/54d621a2150ba0424a8b45e0/registration?_locale=fr_FR" frameborder="0" allowfullscreen></iframe>
+</div>
+
+
 <div class="row">
 
 	<div class="col-md-6"><!-- LEFT COLUMN -->
@@ -29,6 +35,8 @@
 	</div>
 
 	<div class="col-md-6"><!-- RIGHT COLUMN -->
+
+
 
 	<div class="panel transparent" style="height: 315px;">
 	  <div class="panel-heading text-center">
