--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -12,6 +12,10 @@
       </div>
 </div>
 
+<!-- billeterie -->
+<div class="panel panel-iframe">
+  <iframe class="embed-responsive-item" width="300" height="88" src="//www.toornament.com/widget/tournaments/54d622ed150ba0d33b8b4682/registration?_locale=fr_FR" frameborder="0" allowfullscreen></iframe>
+</div>
 
 <div class="row">
 
