modification des règles des tournois

--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -41,12 +41,12 @@
 	      <h4>REGLES</h4>
 	    </div>
 	    <div class="panel-body">
-	      <h4>Tournois 16 slots sur inscriptions.</h4>
+	      <h4>Tournois 16 slots sur inscription, avec un arbre Pro et un arbre Amateur</h4>
 	      <h4 class="orange">Déroulement  sur place : </h4>
 	      <ul>
 		<li>Phase de poule en BO1</li>
 		<li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
-		<li>Finale en BO5</li>
+		<li>Finale en BO3</li>
 	      </ul>
 	      Pour plus de précisions, merci de vous référencer aux document des Masters Français du Jeu Vidéo disponibles <%= link_to "ici", "http://www.mastersjeuvideo.org/files/rules/Annexe_LoL_2014-2015.pdf", target: :blank %>
 	    </div>
