--- a/app/views/jeux/sc2.html.erb
+++ b/app/views/jeux/sc2.html.erb
@@ -43,8 +43,8 @@
 	    <h4>Tournois 32 slots sur inscriptions.</h4>
 	    <h4 class="orange">Déroulement  sur place : </h4>
 	    <ul>
-	      <li>Phase de poule en BO1</li>
-	      <li>Déroulement du tournoi à partir des quarts de finales en BO3</li>
+	      <li>Phase de poule en BO1, avec 2 qualifiés par poule</li>
+	      <li>Déroulement du tournoi en double élimination à partir des 8èmes de finales en BO3</li>
 	      <li>Finale en BO5</li>
 	    </ul>
 
@@ -70,9 +70,9 @@
 	    </div>
 	    <div class="panel-body">
 	      <h4 class="orange">Les joueurs doivent amener :</h4>
-	      <!--div class="tabule">- Leur ordinateur personnel (fixe ou portable)</div-->
+	      <div class="tabule">- Leur ordinateur personnel (fixe ou portable)</div>
 	      <div class="tabule">- Leurs périphériques (clavier, souris, casque)</div>
-	      <!--div class="tabule">- Un câble RJ45 (câblage droit) de 3m minimum</div-->
+	      <div class="tabule">- Un câble RJ45 (câblage droit) de 3m minimum</div>
 	      <br />
 	      <p>Tout joueur doit respecter son propre matériel, le matériel des autres joueurs, ainsi que le matériel mis à sa disposition sous peine de se faire exclure de l'événement. Une équipe de sécurité se tiendra à votre disposition afin de garantir le bon déroulement de l'événement.</p>
 	    </div>
