cachage de l'inscription sur csgo

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -13,8 +13,15 @@
 </div>
 
 <!-- billeterie -->
-<div class="panel panel-iframe">
+<!--div class="panel panel-iframe">
   <iframe class="embed-responsive-item" width="300" height="88" src="//www.toornament.com/widget/tournaments/54d621a2150ba0424a8b45e0/registration?_locale=fr_FR" frameborder="0" allowfullscreen></iframe>
+</div-->
+
+<div class="panel transparent">
+  <div class="panel-body text-center">
+    Les qualifications seront sous forme de tournois hebdomadaires, organisés par <%= link_to "GloryForGamers", "http://www.glory4gamers.com/fr/", target: "blank" %>.
+<br /> Les dates et le format des tournois seront communiqués sous peu.
+  </div>
 </div>
 
 
