init de la page de streams

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -61,6 +61,9 @@
           </ul>
         </li>
 
+        <li class="<%= set_active("streams")%>">
+          <a class="navlink" href="/streams">STREAMS</a>
+        </li>
         <li class="<%= set_active("partenaires")%>">
           <a class="navlink" href="/partenaires"><%= t(:partenaires) %></a>
         </li>
