page de streams : boutons de switch ok

--- a/app/views/static_pages/streams.html.erb
+++ b/app/views/static_pages/streams.html.erb
@@ -3,3 +3,45 @@
     <h1>STREAMS</h1>
   </div>
 </div>
+
+<div class="row">
+  <div class="col-md-12 stream-navbar">
+      <ul id="myTab" class="nav nav-tabs" role="tablist">
+
+        <li role="presentation" class="active">
+	    <a href="#home" id="home-tab" role="tab" data-toggle="tab" aria-controls="home" aria-expanded="true">STREAM 1</a>
+        </li>
+
+        <li role="presentation" class="">
+	    <a href="#profile" role="tab" id="profile-tab" data-toggle="tab" aria-controls="profile" aria-expanded="false">STREAM 2</a>
+        </li>
+
+      </ul>
+  </div>
+
+</div>
+
+<div class="row">
+  <div class="col-md-12 twitch-players">
+
+	 <div id="myTabContent" class="tab-content">
+
+	  <div role="tabpanel" class="tab-pane fade active in" id="home" aria-labelledby="home-tab">
+	     <iframe class="embed-responsive-item" src="http://www.twitch.tv/hearthstonefr/embed" frameborder="0" scrolling="no" height="500" width="100%"></iframe>
+	  </div>
+
+	  <div role="tabpanel" class="tab-pane fade" id="profile" aria-labelledby="profile-tab">
+	     <iframe class="embed-responsive-item" src="http://www.twitch.tv/gamerscentury/embed" frameborder="0" scrolling="no" height="500" width="100%"></iframe>
+	  </div>
+
+	</div>
+  </div>
+
+</div>
+
+
+
+
+
+
+
