--- a/app/views/static_pages/streams.html.erb
+++ b/app/views/static_pages/streams.html.erb
@@ -4,7 +4,9 @@
   </div>
 </div>
 
-<div class="row">
+<%= image_tag "EGC-stream-soon.jpg", class: "img-responsive" %>
+
+<!--div class="row">
   <div class="col-md-12 stream-navbar">
       <ul id="myTab" class="nav nav-tabs" role="tablist">
 
@@ -37,7 +39,7 @@
 	</div>
   </div>
 
-</div>
+</div-->
 
 
 
