tarifs dans informations

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -82,28 +82,24 @@
         <h4>TARIFS</h4>
       </div>
       <div class="panel-body">
-        <h4 class="orange">Public</h4>
+        <h4 class="orange">Places spectateurs</h4>
         <div class="tabule">
 
-        A venir
-        <!-- h4 class="orange">En prévente</h4>
+        <div class="orange">En prévente</div>
           <div class="tabule">
-          Plein Tarif : 15€<br />
-          Tarif réduit  - jeune (7 - 18ans inclus) : 10€<br />
-          Tarif réduit - étudiant : 10€<br />
-          Journée du samedi pour tous : 16€
+          Tarif pack week end : 10€<br />
+          Tarif qualifications samedi : 7€€<br />
+          Tarif finales dimanches : 8€
           </div>
-        <h4 class="orange">A l’entrée</h4>
+        <div class="orange">Sur place</div>
           <div class="tabule">
-          Plein tarif : 16€<br />
-          Tarif réduit - jeune (7 - 18ans inclus) : 11€<br />
-          Tarif réduit - étudiant : 11€<br />
-          Journée du samedi pour tous : 16€<br />
-          </div-->
+          Tarif qualifications samedi : 8€<br />
+          Tarif finales dimanche : 10€
+          </div>
         </div>
 
-        <h4 class="orange">Joueurs</h4>
-          <div class="tabule">Préinsciption : 35 € par joueur </div>
+        <h4 class="orange">Places joueurs</h4>
+          <div class="tabule">Voir section tournois </div>
 
       </div>
     </div>
