tarifs - mentions légales

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -98,9 +98,11 @@
           </div>
         </div>
 
-        <h4 class="orange">Places joueurs</h4>
+        <!--h4 class="orange">Places joueurs</h4>
           <div class="tabule">Voir section tournois </div>
-
+        <br /-->
+        <h4 class="orange">N'achetez jamais votre billet à un inconnu !</h4>
+        <p style="font-size: 14px;">Vous n'auriez aucune garantie de sa validité. Seuls les billets achetés sur <%= link_to "evrygamescity.fr", "http://www.evrygamescity.fr" %> et directement aux caisse des Arènes de l’Agora à Evry vous garantissent l'entrée aux Evry Games City. Nous vous rappelons qu'un billet acheté à l'avance vous donne accès directement au contrôle et vous évite ainsi la queue aux caisses ! </p>
       </div>
     </div>
 
