boutons billeterie spec

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,6 +9,17 @@
 
 // HOME PAGE
 
+.billeterie-panel {
+  
+  .acheter-places {
+    margin-bottom: 10px;
+    margin-top: 10px;
+  }
+  .codes-reservation {
+    margin-bottom: 10px;
+  }
+}
+
 .mosaique {
   margin: 0px;
   padding: 10px;
