--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,7 +8,8 @@
           <%= image_tag "LOGO_LONG_BLACK_EGC-mini.png", height: 75 %>
       </div>
       <div class="modal-body">
-        <%= image_tag "POPUP_site_egc.jpg", class: "img-responsive image-text" %>
+        <%#= image_tag "POPUP_site_egc.jpg", class: "img-responsive image-text" %>
+        <%= render 'static_pages/home/billeterie' %>
       </div>
       <div class="modal-footer">
         <!--button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
@@ -50,7 +51,8 @@
       <div class="row">
         <div class="col-md-12 mosaique billeterie">
           <a href="#" data-toggle="modal" data-target="#myModal">
-            <%= image_tag "Site_EGC_Billeterie.jpg", class: "center-block" %>
+            <%#= image_tag "Site_EGC_Billeterie.jpg", class: "center-block" %>
+            <%= render 'static_pages/home/billeterie' %>
           </a>
         </div>
       </div>
