coquilles dans informations

--- a/app/views/static_pages/informations.html.erb
+++ b/app/views/static_pages/informations.html.erb
@@ -88,7 +88,7 @@
         <div class="orange">En prévente</div>
           <div class="tabule">
           Tarif pack week end : 10€<br />
-          Tarif qualifications samedi : 7€€<br />
+          Tarif qualifications samedi : 7€<br />
           Tarif finales dimanches : 8€
           </div>
         <div class="orange">Sur place</div>
@@ -131,11 +131,11 @@
           <li>TeeWorlds</li>
           <li>CS Source</li>
           <li>Trackmania</li>
-          <li>Team Forteress 2</li>
+          <li>Team Fortress 2</li>
         </ul>
         <p>Des câbles et des PC seront disponibles à la location sur place, dans la limite des stocks disponibles.<br />
            Un <%= link_to "Hôtel Ibis", "http://www.ibis.com/fr/hotel-1986-ibis-styles-evry-cathedrale/index.shtml"%> se situe à proximité.<br />
-           De nombreux restaurants du Centre Commercial Evry 2 situé à proximité seront disponibles.</p>
+           De nombreux restaurants du Centre Commercial Evry 2 situé à proximité seront accessibles.</p>
         
       </div>
     </div>
