billeterie transparency fix

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -97,9 +97,9 @@
 .jeu:hover img {
   opacity: 0.75;
 }
-.billeterie:hover img {
-  opacity: 0.75;
-}
+//.billeterie:hover img {
+//  opacity: 0.75;
+//}
 
 .youtube-container {
   padding-right: 10px;
