changement du message pour les inscriptions à csgo

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -19,8 +19,7 @@
 
 <div class="panel transparent">
   <div class="panel-body text-center">
-    Les qualifications seront sous forme de tournois hebdomadaires, organisés par <%= link_to "GloryForGamers", "http://www.glory4gamers.com/fr/", target: "blank" %>.
-<br /> Les dates et le format des tournois seront communiqués sous peu.
+    Les tournois seront hebdomadaires et se dérouleront le vendredi et le samedi. Toutes les informations et l'inscription disponible <%= link_to "ici", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg1/infos", target: "blank" %>.
   </div>
 </div>
 
