--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -44,7 +44,7 @@
 
 
 
-	<div class="panel transparent" style="height: 315px;">
+	<div class="panel transparent">
 	  <div class="panel-heading text-center">
 	    <h4>REGLES</h4>
 	  </div>
