--- a/app/views/jeux/lol.html.erb
+++ b/app/views/jeux/lol.html.erb
@@ -36,7 +36,7 @@
 
 	<div class="col-md-6"><!-- RIGHT COLUMN -->
 
-	  <div class="panel transparent" style="height: 315px;">
+	  <div class="panel transparent">
 	    <div class="panel-heading text-center">
 	      <h4>REGLES</h4>
 	    </div>
