faute dans csgo

--- a/app/views/jeux/csgo.html.erb
+++ b/app/views/jeux/csgo.html.erb
@@ -19,7 +19,7 @@
 
 <div class="panel transparent">
   <div class="panel-body text-center">
-    Les tournois seront hebdomadaires et se dérouleront le vendredi et le samedi. Toutes les informations et l'inscription disponible <%= link_to "ici", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg1/infos", target: "blank" %>.
+    Les qualifications seront hebdomadaires et se dérouleront le vendredi et le samedi. Toutes les informations et l'inscription disponible <%= link_to "ici", "http://www.glory4gamers.com/fr/tournoi/qualifier-evry-games-city-ndeg1/infos", target: "blank" %>.
   </div>
 </div>
 
