--- a/app/views/static_pages/home/_carousel.html.erb
+++ b/app/views/static_pages/home/_carousel.html.erb
@@ -7,6 +7,7 @@
     <li data-target="#carousel-example-generic" data-slide-to="2"></li>
     <li data-target="#carousel-example-generic" data-slide-to="3"></li>
     <li data-target="#carousel-example-generic" data-slide-to="4"></li>
+    <li data-target="#carousel-example-generic" data-slide-to="5"></li>
   </ol>
  
   <!-- Wrapper for slides -->
@@ -37,6 +38,12 @@
     </div>
     <div class="item">
       <%= image_tag "SlideShow_EGC_5.jpg", alt: "..." %>
+      <div class="carousel-caption">
+          <h3></h3>
+      </div>
+    </div>
+    <div class="item">
+      <%= image_tag "SlideShow_EGC_6.jpg", alt: "..." %>
       <div class="carousel-caption">
           <h3></h3>
       </div>
