iamges des boutons de places spec changées

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -9,14 +9,11 @@
 
 // HOME PAGE
 
-.billeterie-panel {
-  
+.billeterie-panel {  
   .acheter-places {
-    margin-bottom: 10px;
-    margin-top: 10px;
+    border-bottom: 2px solid black;
   }
   .codes-reservation {
-    margin-bottom: 10px;
   }
 }
 
